리뷰삭제 수정, 거래내역url수정

--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -40,7 +40,6 @@
         <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
         <!--STOMP-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-        <th:block layout:fragment="script"> </th:block>
         <script th:inline="javascript">
             /*로그인 한 경우 동작*/
             if ([[${session.loginMember}]]["memId"] != null) {
@@ -77,9 +76,9 @@
                         }
                     );
                 }
-
                 connect();
             }
         </script>
     </body>
+    <div layout:fragment="script"> </div>
 </html>
