--- a/src/main/resources/templates/member/memberInfo.html
+++ b/src/main/resources/templates/member/memberInfo.html
@@ -28,10 +28,10 @@
 
 
         <button class="w-50 btn btn-secondary btn-group-sm"
-                type="button"  th:onclick="|location.href='@{/members/{memId}/buyList(memId=${session.loginMember.memId})}'|">구매내역 보기</button>
+                type="button"  th:onclick="|location.href='@{/members/{memId}/transaction/buyList(memId=${session.loginMember.memId})}'|">구매내역 보기</button>
         <div style="height: 10px"></div>
         <button class="w-50 btn btn-secondary btn-group-sm"
-                 type="button" th:onclick="|location.href='@{/members/{memId}/sellList(memId=${session.loginMember.memId})}'|">판매완료내역 보기</button>
+                 type="button" th:onclick="|location.href='@{/members/{memId}/transaction/sellList(memId=${session.loginMember.memId})}'|">판매완료내역 보기</button>
 
 
         <h4 class="mb-3"> 프로필 수정 </h4>
