--- a/src/main/resources/templates/member/mySellList.html
+++ b/src/main/resources/templates/member/mySellList.html
@@ -22,7 +22,7 @@
 <div layout:fragment="content">
     <div class="form-container">
         <div class="py-5 text-center">
-            <h2>판매 완료!! 내역</h2>
+            <h2>[[${memId}]]님의 판매 완료!! 내역</h2>
         </div>
         <th:block th:unless="${sellList.isEmpty()}">
             <div th:each="sellOne : ${sellList}">
