--- a/src/main/resources/templates/review/reviewForm.html
+++ b/src/main/resources/templates/review/reviewForm.html
@@ -164,7 +164,7 @@
     </div> <!-- /form-container -->
 </div>
 
-<div layout:fragment="script">
+SELECT * FROM REVIEW_BUYER <div layout:fragment="script">
     <script th:inline="javascript">
         let reviewStateCode = '0';
 
@@ -254,7 +254,7 @@
                 success: function (data) {
                     alert("리뷰가 등록되었습니다.");
                     let me =  [[${reviewForm.buyerId}]] ;
-                    window.location.href= `/members/${me}/buyList`
+                    window.location.href= `/members/${me}/transaction/buyList`
                 },
                 error: function (err) {
                     console.log(err);
@@ -277,7 +277,7 @@
                 success: function (data) {
                     alert("리뷰가 등록되었습니다.");
                     let me =  [[${reviewForm.sellerId}]] ;
-                    window.location.href= `/members/${me}/sellList`
+                    window.location.href= `/members/${me}/transaction/sellList`
                 },
                 error: function (err) {
                     console.log(err);
