--- a/src/main/resources/templates/memberHome.html
+++ b/src/main/resources/templates/memberHome.html
@@ -48,8 +48,9 @@
 
     <h3 th:text="|${member.memId}님|"></h3>
     <p th:text="|${member.nickname}님의 매너온도 : ${member.mannerScore}|"></p>
-    <span th:text="|${member.nickname}님의 판매상품 : ${countPost}개|"></span>
-    <button type="button"> >이동</button>
+    <span th:text="|${member.nickname}님의 판매상품 : ${countPost}개|"></span> <button type="button"> >이동</button> <br/>
+    <span th:text="|받은 매너 후기|"></span> <button type="button"> >이동</button> <br/>
+    <span th:text="|받은 거래 후기 : 개|"></span> <button type="button"> >이동</button> <br/>
 </div>
 
 <script layout:fragment="script" th:inline="javascript">
