--- a/src/main/resources/static/css/previewImg.css
+++ b/src/main/resources/static/css/previewImg.css
@@ -15,7 +15,7 @@
     background-color: #fff !important;
     color: #b7b7b7 !important;
     border: 2px solid #b7b7b7;
-    font-size: 35px !important;
+    /*font-size: 35px !important;*/
     padding: 0 !important;
 }
 
