--- a/src/main/resources/templates/upload_page.html
+++ b/src/main/resources/templates/upload_page.html
@@ -30,8 +30,8 @@
 <!--                    <input class="upload-name"  value="파일선택" disabled="disabled">-->
 <!--                    <label for="ex_filename" class="btn btn-secondary">업로드</label>-->
                     <div class="inputFile">
-                    <label for='inputImage' class="addImgBtn">+</label>
-                    <input type="file" multiple="multiple" name="uploadFiles" id='inputImage' accept="image/*">
+                    <label for='inputImage' class="addImgBtn">사진선택</label>
+                    <input type="file" multiple="multiple" name="uploadFiles" id='inputImage' accept="image/*" style="display: none;">
                     </div>
                 <!--사진 미리보기-->
 <!--                    <img src="https://i0.wp.com/adventure.co.kr/wp-content/uploads/2020/09/no-image.jpg" class="image-box"-->
@@ -64,9 +64,7 @@
                 <textarea class="form-control" id="productsDescription" name="content" rows="10" placeholder="제품 설명을 작성해주세요."></textarea>
             </div>
 
-            <div class="form-group form-car-mileage">
-                <input type="text" class="form-control" id="carMileage" name="wishPlace" placeholder="거래희망장소">
-            </div>
+
 <!--            <div class="form-group form-car-smoking">-->
 <!--                <label>차량 판매자 흡연 여부</label>-->
 <!--                <div class="form-check form-check-inline form-check-smoking">-->
@@ -80,14 +78,24 @@
 <!--            </div>-->
             <button type="button" id="uploadBtn" class="btn btn-primary btn-submit">상품 등록하기</button>
         </form>
+
+        <!--거래희망장소-->
+        <button id="regPlace" type="button">거래희망장소 등록하기</button>
+
+        <div id="mapArea">
+            <!--카카오맵 지도-->
+            <div id="map" style="width:100%;height:350px;"></div>
+            <p>거래 희망하는 장소를 지도에서 클릭해주세요!</p>
+                <div id="placeInfo" class="form-group form-car-mileage" style="display: none;">
+                    <input type="text" class="form-control"  name="wishPlace" placeholder="장소명을 입력해주세요. 예)강남역 1번 출구">
+                </div>
+                <div id="clickLatlng"></div>
+            <button id="noPlace" type="button" >장소선택 안함</button>
+        </div>
+
     </div>
 
-    <footer>
-        <div class="container">
-            <a href="board.html">2019 당근 마켓</a>
-            <h6>Copyright © Danggeun Market Inc. All rights reserved.</h6>
-        </div>
-    </footer>
+
 
 <!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>-->
 <!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
@@ -99,6 +107,79 @@
 <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
 <!--jquery UI CDN(드래그앤드롭)-->
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js" integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0=" crossorigin="anonymous"></script>
+<!--지도API: head, body 등 어떠한 위치에 넣어도 상관없지만, 반드시 실행 코드보다 먼저 선언되어야 합니다.-->
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e133f6ea3b90b5b74b80864ba7037219"></script>
+
+<!--지도 띄우기-->
+<script>
+    //지도 숨겼다가 거래희망장소등록 버튼 클릭시 보이기
+    $('#mapArea').hide();
+    $('#regPlace').click(function (){
+        $('#mapArea').show();
+        relayout();
+    });
+    //장소선택안함 클릭시 지도 숨기기
+    $('#noPlace').click(function (){
+        $('#mapArea').hide();
+    })
+
+    function relayout() {
+        // 지도를 표시하는 div 크기를 변경한 이후 지도가 정상적으로 표출되지 않을 수도 있습니다
+        // 크기를 변경한 이후에는 반드시  map.relayout 함수를 호출해야 합니다
+        // window의 resize 이벤트에 의한 크기변경은 map.relayout 함수가 자동으로 호출됩니다
+        map.relayout();
+    }
+
+
+
+
+
+
+    var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+        mapOption = {
+            center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+            level: 3 // 지도의 확대 레벨
+        };
+
+    var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+
+    // 지도를 클릭한 위치에 표출할 마커입니다
+    var marker = new kakao.maps.Marker({
+        // 지도 중심좌표에 마커를 생성합니다
+        position: map.getCenter()
+    });
+
+    // 지도에 마커를 표시합니다
+    marker.setMap(map);
+
+    // 지도에 클릭 이벤트를 등록합니다
+    // 지도를 클릭하면 마지막 파라미터로 넘어온 함수를 호출합니다
+    kakao.maps.event.addListener(map, 'click', function(mouseEvent) {
+
+        // 클릭한 위도, 경도 정보를 가져옵니다
+        var latlng = mouseEvent.latLng;
+        // console.log("클릭한 위도,경도:", latlng);
+        // console.log("클릭한 위도:", latlng.getLat());
+        // console.log("클릭한 경도:", latlng.getLng());
+
+        // 마커 위치를 클릭한 위치로 옮깁니다
+        marker.setPosition(latlng);
+
+        var message = '클릭한 위치의 위도는 ' + latlng.getLat() + ' 이고, ';
+        message += '경도는 ' + latlng.getLng() + ' 입니다';
+
+        var resultDiv = document.getElementById('clickLatlng');
+        resultDiv.innerHTML = message;
+
+        document.getElementById('placeInfo').style.display='block';
+
+    });
+        // 아래 코드는 지도 위의 마커를 제거하는 코드입니다
+        // marker.setMap(null);
+
+
+
+</script>
 
     <script>
 
@@ -223,30 +304,32 @@
                 }
             })
 
-        //미리보기 이미지 삭제
+        //미리보기 이미지 삭제, 파일리스트에서 삭제
         function delImg(e){
             console.log(e.className);
 
             if(e.className !== 'delBtn') return;
             const removeTargetId = e.dataset.index;
             const removeTarget = document.getElementById(removeTargetId);
-            const files = document.querySelector('#inputImage').files;
+            const files = document.querySelector('#inputImage').files; //사용자가 입력한 파일을 변수에 할당
             const dataTransfer = new DataTransfer();
 
             // document.querySelector('#file-input').files =
             //             Array.from(files).filter(file => file.lastModified !== removeTarget);
 
 
+            //변수에 할당된 파일을 배열로 변환(FileList -> Array)
             Array.from(files)
-                .filter(file => file.lastModified != removeTargetId)
+                .filter(file => file.lastModified != removeTargetId) //제거할 파일이 아닌 것들만 모음.
                 .forEach(file => {
-                    dataTransfer.items.add(file);
+                    dataTransfer.items.add(file);  //배열을 dataTransfer로 처리(Array -> FileList)
                 });
 
             document.querySelector('#inputImage').files = dataTransfer.files;
 
+            //파일리스트에서 삭제
             removeTarget.remove();
-
+            //미리보기에서 삭제
             $(e).parent('li').remove();
         }
 
