--- a/src/main/resources/templates/review/reviewForm.html
+++ b/src/main/resources/templates/review/reviewForm.html
@@ -164,7 +164,7 @@
     </div> <!-- /form-container -->
 </div>
 
-SELECT * FROM REVIEW_BUYER <div layout:fragment="script">
+<div layout:fragment="script">
     <script th:inline="javascript">
         let reviewStateCode = '0';
 
